[package]
name = "dpc"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu"
]
description = "A library for decentralized private computation"
homepage = "https://libzexe.org"
repository = "https://github.com/scipr/zexe"
documentation = "https://docs.rs/zexe/"
keywords = ["zero knowledge", "cryptography", "smart contracts", "cryptocurrency"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra = { path = "../algebra" }
r1cs-core = { path = "../r1cs-core" }
r1cs-std = { path = "../r1cs-std" }
crypto-primitives = { path = "../crypto-primitives", features = [ "gm17", "r1cs" ] }
gm17 = { path = "../gm17" }
bench-utils = { path = "../bench-utils" }

digest = "0.7"
blake2 = "0.7"

rand = { version = "0.7" }
derivative = "1"
rayon = "1"

clippy = { version = "*", optional = true }

[dev-dependencies]
criterion = "0.2"
rand_xorshift = { version = "0.2" }

###############################################################################

################################## Features ###################################

[features]
print-trace = [ "bench-utils/print-trace" ]

###############################################################################
