[package]
name = "dpc"
version = "0.1.1-alpha.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu"
]
description = "A library for decentralized private computation"
homepage = "https://libzexe.org"
repository = "https://github.com/scipr/zexe"
documentation = "https://docs.rs/zexe/"
keywords = ["zero knowledge", "cryptography", "smart contracts", "cryptocurrency"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra = { path = "../algebra", features = [ "bls12_377", "ed_on_bls12_377", "ed_on_cp6_782", "cp6_782" ] }
r1cs-core = { path = "../r1cs-core" }
r1cs-std = { path = "../r1cs-std", features = [ "bls12_377", "ed_on_bls12_377", "ed_on_cp6_782" ] }
crypto-primitives = { path = "../crypto-primitives", features = [ "groth16", "r1cs" ] }
groth16 = { path = "../groth16" }
bench-utils = { path = "../bench-utils" }

rand = { version = "0.7" }
derivative = "2"

[dev-dependencies]
rand_xorshift = { version = "0.2" }
tracing-subscriber = { version = "0.2" }
tracing = { version = "0.1", default-features = false }

###############################################################################

################################## Features ###################################

[features]
print-trace = [ "bench-utils/print-trace" ]

###############################################################################
