[package]
name = "ff-fft"
version = "0.1.1-alpha.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu"
]
description = "A library for evaluating FFTs over prime finite fields"
homepage = "https://libzexe.org"
repository = "https://github.com/scipr/zexe"
documentation = "https://docs.rs/ff-fft/"
keywords = ["cryptography", "finite fields", "fft"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
algebra-core = { path = "../algebra-core", default-features = false }
rand = { version = "0.7", default-features = false }
rayon = { version = "1", optional = true }

[dev-dependencies]
algebra = { path = "../algebra", default-features = false, features = [ "bls12_381", "mnt6_753", "mnt4_753" ] }

[features]
default = [ "parallel" ]
std = ["algebra-core/std"]
parallel = ["std", "algebra-core/parallel", "rayon"]
