[package]
name = "gm17"
version = "0.1.1-alpha.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu"
]
description = "An implementation of the Groth-Maller 2017 zkSNARK proof system"
homepage = "https://libzexe.org"
repository = "https://github.com/scipr/zexe"
documentation = "https://docs.rs/gm17/"
keywords = ["zero knowledge", "cryptography", "zkSNARK", "SNARK", "Groth-Maller"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra-core = { path = "../algebra-core", default-features = false, features = [ "derive" ] }
bench-utils = { path = "../bench-utils" }
ff-fft = { path = "../ff-fft", default-features = false }
r1cs-core = { path = "../r1cs-core", default-features = false }
rand = { version = "0.7", default-features = false }
rayon = { version = "1", optional = true }

[dev-dependencies]
csv = { version = "1" }
algebra = { path = "../algebra", default-features = false, features = [ "bls12_377", "bls12_381", "cp6_782", "mnt6_298", "mnt4_298" ] }
r1cs-std = { path = "../r1cs-std", default-features = false, features = [ "mnt6_298", "mnt4_298" ] }
crypto-primitives = { path = "../crypto-primitives", default-features = false, features = [ "gm17", "r1cs" ] }

[features]
default = ["parallel"]
std = ["algebra-core/std", "ff-fft/std", "r1cs-core/std"]
parallel = ["std", "algebra-core/parallel", "ff-fft/parallel", "rayon"]
print-trace = [ "bench-utils/print-trace" ]

[[example]]
name = "gm17"
path = "examples/snark-scalability/gm17.rs"
required-features = ["std"]

[[example]]
name = "gm17-recursive"
path = "examples/recursive-snark/gm17.rs"
required-features = ["std"]
