[package]
name = "groth16"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Kobi Gurkan",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu"
]
description = "An implementation of the Groth 2016 zkSNARK proof system"
homepage = "https://libzexe.org"
repository = "https://github.com/scipr/zexe"
documentation = "https://docs.rs/groth16/"
keywords = ["zero knowledge", "cryptography", "zkSNARK", "SNARK", "Groth"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra = { path = "../algebra", features = [ "parallel" ] }
ff-fft = { path = "../ff-fft" }
r1cs-core = { path = "../r1cs-core" }
bench-utils = { path = "../bench-utils" }

rand = { version = "0.7" }
rayon = { version = "1" }
smallvec = "1.2.0"

[dev-dependencies]
csv = { version = "1" }

[features]
print-trace = [ "bench-utils/print-trace" ]

[[example]]
name = "groth16"
path = "examples/snark-scalability/groth16.rs"
