[package]
name = "primitives"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "Daniele Di Benedetto <daniele@horizenlabs.io>",
    "Marcelo Kaihara <marcelo@horizenlabs.io>",
    "Ulrich Haboeck <ulrich@horizenlabs.io>"
]
description = "A library of cryptographic primitives"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra = { path = "../algebra", features = ["parallel"] }
bench-utils = { path = "../bench-utils" }

digest = { version = "0.7", optional = true }
blake2 = { version = "0.7", optional = true }

rand = { version = "0.7" }
derivative = "1"
rayon = "1"
hex = "0.4.0"

rocksdb = { version = "0.14.0", optional = true }

[features]
llvm_asm = ["algebra/llvm_asm"]

commitment = ["digest", "blake2"]
merkle_tree = []
smt = ["merkle_tree", "rocksdb"]
prf = ["digest", "blake2"]
signature = ["digest", "blake2"]
vrf = []

# For Poseidon CRH / Merkle Tree
mnt4_753 = ["algebra/mnt4_753"]
mnt6_753 = ["algebra/mnt6_753"]
bn_382 = ["algebra/bn_382"]

[dev-dependencies]
algebra = { path = "../algebra", features = ["edwards_sw6", "jubjub", "sw6", "bls12_377"] }
primitives = { path = "../primitives", features = ["mnt4_753", "mnt6_753", "bn_382"] }

criterion = "0.3"
rand_xorshift = { version = "0.2" }

################################# Benchmarks ##################################

[[bench]]
name = "pedersen_crh"
path = "benches/crypto_primitives/crh.rs"
harness = false
required-features = ["mnt4_753"]

[[bench]]
name = "pedersen_comm"
path = "benches/crypto_primitives/comm.rs"
harness = false
required-features = ["commitment", "mnt4_753"]

[[bench]]
name = "blake2s_prf"
path = "benches/crypto_primitives/prf.rs"
harness = false
required-features = ["prf"]

[[bench]]
name = "schnorr_sig"
path = "benches/crypto_primitives/signature.rs"
harness = false
required-features = ["signature", "mnt4_753", "mnt6_753"]

[[bench]]
name = "ecvrf"
path = "benches/crypto_primitives/ecvrf.rs"
harness = false
required-features = ["vrf", "mnt4_753", "mnt6_753"]

[[bench]]
name = "poseidon_crh"
path = "benches/crypto_primitives/poseidon_crh.rs"
harness = false
required-features = ["bn_382", "mnt4_753", "mnt6_753"]

[[bench]]
name = "poseidon_mht"
path = "benches/crypto_primitives/poseidon_mht.rs"
harness = false
required-features = ["merkle_tree", "mnt4_753", "mnt6_753"]

