[package]
name = "primitives"
version = "0.2.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "Daniele Di Benedetto <daniele@horizenlabs.io>",
    "Marcelo Kaihara <marcelo@horizenlabs.io>",
    "Ulrich Haboeck <ulrich@horizenlabs.io>"
]
description = "A library of cryptographic primitives"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra = { path = "../algebra" }
bench-utils = { path = "../bench-utils" }

digest = { version = "0.8", optional = true }
blake2 = { version = "0.8.1", optional = true }

rand = { version = "0.7" }
derivative = "1"
rayon = "1"
hex = "0.4.0"

[features]
commitment = ["digest", "blake2"]
merkle_tree = []
prf = ["digest", "blake2"]
signature = ["digest", "blake2"]
vrf = []

[dev-dependencies]
criterion = "0.2"
rand_xorshift = { version = "0.2" }

################################# Benchmarks ##################################

[[bench]]
name = "pedersen_crh"
path = "benches/crypto_primitives/crh.rs"
harness = false

[[bench]]
name = "pedersen_comm"
path = "benches/crypto_primitives/comm.rs"
harness = false
required-features = ["commitment"]

[[bench]]
name = "blake2s_prf"
path = "benches/crypto_primitives/prf.rs"
harness = false
required-features = ["prf"]

[[bench]]
name = "schnorr_sig"
path = "benches/crypto_primitives/signature.rs"
harness = false
required-features = ["signature"]

[[bench]]
name = "ecvrf"
path = "benches/crypto_primitives/ecvrf.rs"
harness = false
required-features = ["vrf"]
