[package]
name = "proof-systems"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "Daniele Di Benedetto <daniele@horizenlabs.io>",
    "Marcelo Kaihara <marcelo@horizenlabs.io>",
    "Ulrich Haboeck <ulrich@horizenlabs.io>"
]
description = "A library of zk proof systems"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra = { path = "../algebra", features = [ "parallel", "fft" ] }
r1cs-core = { path = "../r1cs/core" }
bench-utils = { path = "../bench-utils" }

rand = { version = "0.7" }
rayon = { version = "1" }
smallvec = { version = "0.6" }
byteorder = { version = "1" }

serde = { version = "1.0.117", features = ["derive"]}

[dev-dependencies]
csv = { version = "1" }
criterion = "0.3"
rand_xorshift = { version = "0.2" }

algebra = { path = "../algebra", features = [ "bls12_377", "mnt4_753", "mnt6_753", "sw6", "bn_382" ] }
r1cs-crypto = { path = "../r1cs/gadgets/crypto", features = ["nizk"] }
r1cs-std = { path = "../r1cs/gadgets/std" }

[features]
print-trace = [ "bench-utils/print-trace" ]
groth16 = []
gm17 = []
llvm_asm = ["algebra/llvm_asm"]

[[example]]
name = "groth16"
path = "src/groth16/examples/snark-scalability/groth16.rs"
required-features = ["groth16", "algebra/bls12_377"]

[[example]]
name = "groth16-recursive"
path = "src/groth16/examples/recursive-snark/groth16.rs"
required-features = ["groth16", "r1cs-crypto/mnt4_753", "r1cs-crypto/mnt6_753", "r1cs-std/mnt4_753", "r1cs-std/mnt6_753"]

[[example]]
name = "gm17"
path = "src/gm17/examples/snark-scalability/gm17.rs"
required-features = ["gm17", "algebra/bls12_377"]

[[example]]
name = "gm17-recursive"
path = "src/gm17/examples/recursive-snark/gm17.rs"
required-features = ["gm17", "r1cs-crypto/mnt4_753", "r1cs-crypto/mnt6_753", "r1cs-std/mnt4_753", "r1cs-std/mnt6_753" ]

[[bench]]
name = "gro16_bench"
path = "src/groth16/benches/gro16_bench.rs"
harness = false
required-features = ["groth16", "algebra/bn_382"]