[package]
name = "proof-systems"
version = "0.3.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "Daniele Di Benedetto <daniele@horizenlabs.io>",
    "Marcelo Kaihara <marcelo@horizenlabs.io>",
    "Ulrich Haboeck <ulrich@horizenlabs.io>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>"
]
description = "A library of zk proof systems"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[dependencies]
algebra = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "development_tmp", features = [ "parallel", "fft"] }
r1cs-core = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "development_tmp" }
bench-utils = { path = "../bench-utils" }

marlin = { git = "https://github.com/HorizenLabs/marlin", branch = "dev", optional = true }
poly-commit = { git = "https://github.com/HorizenLabs/poly-commit", branch = "dev", optional = true }

r1cs-std = { path = "../r1cs/gadgets/std", optional = true }

rand = { version = "0.8.4" }
rayon = { version = "1" }
smallvec = { version = "1.6.1" }
byteorder = { version = "1" }
digest = { version = "0.8", optional = true }
serde = { version = "1.0.117", features = ["derive"]}
derivative = { version = "2.2.0", optional = true }

[dev-dependencies]
csv = { version = "1" }
criterion = "0.3"
rand_xorshift = { version = "0.3.0" }
blake2 = { version = "0.8.1", default-features = false }

algebra = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "development_tmp", features = ["full", "parallel", "fft"] }
r1cs-crypto = { path = "../r1cs/gadgets/crypto", features = ["nizk"] }

[features]
print-trace = [ "bench-utils/print-trace" ]
groth16 = []
gm17 = []
darlin = ["marlin", "poly-commit", "digest", "derivative", "r1cs-std"]
llvm_asm = ["algebra/llvm_asm"]

[[example]]
name = "groth16"
path = "src/groth16/examples/snark-scalability/groth16.rs"
required-features = ["groth16", "algebra/bls12_377"]

[[example]]
name = "groth16-recursive"
path = "src/groth16/examples/recursive-snark/groth16.rs"
required-features = ["groth16", "r1cs-std/mnt4_753", "r1cs-std/mnt6_753"]

[[example]]
name = "gm17"
path = "src/gm17/examples/snark-scalability/gm17.rs"
required-features = ["gm17", "algebra/bls12_377"]

[[example]]
name = "gm17-recursive"
path = "src/gm17/examples/recursive-snark/gm17.rs"
required-features = ["gm17", "r1cs-std/mnt4_753", "r1cs-std/mnt6_753" ]

[[bench]]
name = "gro16_bench"
path = "src/groth16/benches/gro16_bench.rs"
harness = false
required-features = ["groth16", "algebra/bn_382", "r1cs-std"]

[[bench]]
name = "bn382_gro16_test_circuits"
path = "src/groth16/benches/bn382_gro16_test_circuits.rs"
harness = false
required-features = ["groth16", "algebra/bn_382", "r1cs-std"]

[[bench]]
name = "darlin_batch_verification_bench"
path = "src/darlin/benches/batch_verification.rs"
harness = false
required-features = [
    "darlin", "llvm_asm", "algebra/tweedle",
]

[[bench]]
name = "darlin_accumulate_verify_bench"
path = "src/darlin/benches/accumulate_verify.rs"
harness = false
required-features = [
    "darlin", "llvm_asm", "algebra/tweedle",
]