[package]
name = "ark-relations"
version = "0.4.0-alpha.1"
authors = [ "arkworks constributors" ]
description = "A library for rank-one constraint systems"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/snark"
documentation = "https://docs.rs/ark-relations/"
keywords = ["zero-knowledge", "cryptography", "zkSNARK", "SNARK", "constraint-systems"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.4.0-alpha", default-features = false }
ark-std = { version = "0.4.0-alpha", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.2", default-features = false, optional = true }

[dev-dependencies]
ark-test-curves = { version = "0.4.0-alpha", default-features = false, features = [ "bls12_381_scalar_field" ] }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "tracing-subscriber", "tracing/std" ]
