[package]
name = "ark-relations"
version.workspace = true
authors.workspace = true
description = "A library for rank-one constraint systems"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ark-relations/"
keywords = ["zero-knowledge", "cryptography", "zkSNARK", "SNARK", "constraint-systems"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license.workspace = true
edition.workspace = true

[dependencies]
ark-ff.workspace = true
ark-std.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
ark-test-curves = { workspace = true, features = [ "bls12_381_scalar_field" ] }

[features]
default = []
std = [ "ark-std/std", "ark-ff/std", "tracing-subscriber", "tracing/std" ]
