[package]
name = "ark-relations"
version.workspace = true
authors.workspace = true
description = "A library for rank-one constraint systems"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ark-relations/"
keywords = ["zero-knowledge", "cryptography", "zkSNARK", "SNARK", "constraint-systems"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license.workspace = true
edition.workspace = true

[dependencies]
ark-ff.workspace = true
ark-std.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, optional = true }
itertools = { version = "0.13.0", default-features = false }

[dev-dependencies]
ark-test-curves = { workspace = true, features = [ "bls12_381_scalar_field" ] }
tokio = { version = "1", features = [ "full" ] }
ark-ec = { version = "0.5.0", default-features = false }
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat", branch = "release-0.5" }
ark-bn254 = { version = "0.5.0", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "0.5.0", default-features = false, features = [ "curve" ] }

[features]
default = [ "itertools/use_alloc" ]
std = [ "ark-std/std", "ark-ff/std", "tracing-subscriber", "tracing/std", "ark-ec/std", "itertools/use_alloc" ]