[package]
name = "ark-abpr21"
version = "0.1.0"
authors = [ " Amine-Baghery" ]
description = "A RO-based simulation extractable variant of Groth16"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/snark/abpr21"
documentation = "https://docs.rs/ark-abpr21/"
keywords = ["zero-knowledge", "cryptography", "zkSNARK", "SE-zkSNARK", "Simulation Extractability"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", path = "../relations", default-features = false }
