[package]
name = "ark-snark"
version = "0.4.0-alpha.1"
authors = [ "arkworks contributors" ]
description = "A library for SNARK traits"
homepage = "https://arkworks.rs"
repository = "https://github.com/arkworks-rs/snark"
documentation = "https://docs.rs/ark-snark/"
keywords = ["zero-knowledge", "cryptography", "zkSNARK", "SNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies]
ark-ff = { version = "0.4.0-alpha", default-features = false }
ark-std = { version = "0.4.0-alpha", default-features = false }
ark-serialize = { version = "0.4.0-alpha", default-features = false }
ark-relations = { version = "0.4.0-alpha", path = "../relations", default-features = false }
