[package]
name = "ark-snark"
version.workspace = true
authors.workspace = true
description = "A library for SNARK traits"
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/ark-snark/"
keywords = ["zero-knowledge", "cryptography", "zkSNARK", "SNARK"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license.workspace = true
edition.workspace = true

[dependencies]
ark-ff.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true
ark-relations = { version = "0.5", path = "../relations", default-features = false }

[features]
std = [ "ark-std/std", "ark-ff/std", "ark-serialize/std" ]
default = [ "std" ]