[package]
name = "gpu"
version = "0.1.0"
authors = ["jonch <9093549+jon-chuang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra-core = { path = "..", default-features = false, features = ["parallel"] }
algebra = { path = "../../algebra", default-features = false, features = ["bw6_761"] }
accel = { git = "https://github.com/jon-chuang/accel/accel" }
rayon = { version = "1.3.0" }

rand = { version = "0.7", default-features = false }
rand_xorshift = "0.2"

[features]
parallel = []
