[package]
name = "gpu"
version = "0.1.0"
authors = ["jonch <9093549+jon-chuang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra-core = { path = "..", default-features = false, features = ["parallel", "bw6_asm"] }
algebra = { path = "../../algebra", default-features = false, features = ["all_curves"] }
# accel = { git = "https://github.com/jon-chuang/accel", package = "accel" }
accel = { path = "/home/jonch/Desktop/Programming/Rust/accel/accel"}
rayon = { version = "1.3.0" }
peekmore = "0.5.6"
closure = "0.3.0"

rand = { version = "0.7", default-features = false }
rand_xorshift = "0.2"
paste = "0.1"

[features]
parallel = []
