[package]
name = "algebra-derive"
version = "0.2.0"
authors = [ "arkworks Contributors" ]
description = "A library for deriving serialization traits"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

################################# Dependencies ################################

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "=1.0.32"
syn = "=1.0.81"
quote = "=1.0.10"
