[package]
name = "mince"
version = "0.1.1-alpha.0"
authors = ["jon-chuang <9093549+jon-chuang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = {version = "1.0.17", features = ["full"]}

[lib]
proc-macro = true
